--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -1,78 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".BluetoothActivity">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".BluetoothActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp">
+            android:orientation="vertical">
 
-            <Switch
-                android:id="@+id/bluetooth_toggle"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginRight="8dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Turn Bluetooth ON/OFF"
-                android:paddingRight="72dp"/>
+                android:padding="8dp">
 
-            <TextView
-                android:id="@+id/connectivity_status"
-                android:layout_width="wrap_content"
+                <Switch
+                    android:id="@+id/bluetooth_toggle"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_marginRight="8dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="72dp"
+                    android:text="Turn Bluetooth ON/OFF" />
+
+                <TextView
+                    android:id="@+id/connectivity_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Status" />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/bluetooth_scan"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Status"/>
+                android:text="Scan" />
+
+            <Button
+                android:id="@+id/bluetooth_discoverable"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Discoverable" />
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/bluetooth_scan"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/available_text"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Scan" />
+            android:padding="16dp"
+            android:text="Available Devices"
+            android:textColor="@android:color/black"
+            android:textSize="16dp"
+            android:visibility="invisible" />
 
-        <Button
-            android:id="@+id/bluetooth_discoverable"
+        <View
+            android:id="@+id/separator"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Discoverable" />
+            android:layout_height="2dp"
+            android:background="@android:color/darker_gray"
+            android:visibility="invisible" />
+
+        <ListView
+            android:id="@+id/devices_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="4dp">
+
+        </ListView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/url"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Type URL here" />
+
+            <Button
+                android:id="@+id/bluetooth_send_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Send" />
+
+        </LinearLayout>
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/available_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Available Devices"
-        android:textColor="@android:color/black"
-        android:padding="16dp"
-        android:textSize="16dp"
-        android:visibility="invisible"/>
-
-    <View
-        android:id="@+id/separator"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@android:color/darker_gray"
-        android:visibility="invisible"/>
-
-    <ListView
-        android:paddingTop="4dp"
-        android:id="@+id/devices_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </ListView>
-
-</LinearLayout>
+</ScrollView>
