--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -43,7 +43,7 @@
         android:id="@+id/recording_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/record_button"
+        android:layout_above="@+id/print_QR_button"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="40dp"
         android:maxLines="1"
@@ -51,6 +51,17 @@
         android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/print_QR_button"
+        android:background="@color/colorPrimary"
+        android:text="PRINT QR"
+        android:textColor="@android:color/white"
+        android:layout_above="@+id/record_button"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"/>
 
     <Button
         android:id="@+id/pause_button"
