Bluetooth 1.5 Record 1.5 Scan 1.5

--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -92,7 +92,8 @@
         android:id="@+id/devices_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="4dp">
+        android:paddingTop="4dp"
+        android:background="@drawable/customshape">
 
     </ListView>
 
