--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -3,5 +3,5 @@
 <paths>
     <external-path
         name="SoundRecorder/"
-        path="SoundRecorder"></external-path>
+        path="SoundRecorder"/>
 </paths>
