--- a/app/src/main/res/drawable/border_profile.xml
+++ b/app/src/main/res/drawable/border_profile.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke android:color="@color/colorAccent"
+    <stroke android:color="@color/colorPrimary"
         android:width="4dp"/>
+
+    <solid android:color="#ffffff"/>
 
     <corners android:radius="16dp"/>
 
