Added AppTutorial feature

--- a/app/src/main/res/layout/user_profile_layout.xml
+++ b/app/src/main/res/layout/user_profile_layout.xml
@@ -193,7 +193,8 @@
                     android:layout_width="112dp"
                     android:layout_height="wrap_content"
                     android:hint="Birthday"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:configChanges="keyboardHidden"/>
 
             </android.support.design.widget.TextInputLayout>
 
